@@ -19,6 +19,7 @@ endif::[]
 === Fixes
 
 * fix: Support for PCRetriableException in ReactorProcessor (#733)
+* fix: NullPointerException on partitions revoked (#757)
 * fix: remove lingeringOnCommitWouldBeBeneficial and unused imports (#732)
 
 === Improvements
